--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
+    "env": "0.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "mongodb": "^3.6.6",
