--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "pokemon": "nodemon app.js",
+    "app": "nodemon app.js",
     "test": "node test.js",
     "prove01": "nodemon prove01.js",
     "prove02": "nodemon prove02.js"
@@ -19,10 +19,12 @@
     "env": "0.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
+    "express-session": "^1.17.2",
     "mongodb": "^3.6.6",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
